[package]
name = "smog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.5", features = ["std", "suggestions", "derive", "cargo"]  }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
nix = "0.23.0"
libc = "0.2.112"
procfs = "0.12.0"
